--- a/verifier_contracts/package.json
+++ b/verifier_contracts/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.2"
+    "hardhat": "^2.10.2",
+    "hardhat-gas-reporter": "^1.0.8"
   }
 }
